<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.24">
  <DUT Name="ST_UAMethodCall_CallInOutParam" Id="{6f68ae5f-05a9-43dd-9a79-ce9899535629}">
    <Declaration><![CDATA[TYPE ST_UAMethodCall_CallInOutParam :
STRUCT
	nNumberOfOutputArguments	: UDINT := 2;
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ARRAY [1..2] OF ST_UAMethodArgInfo;
	//If dynamic out params are in front of others: they need to be memcpyed afterwards.
	//OutputData					: ARRAY [1..8] OF BYTE;
	//This testmethod just returns 2 DINTs so we could directly define them here
	output1						: DINT;
	output2						: DINT;  
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>